error and validation
