# controller/todos.js
@@ -14,6 +14,8 @@ const getAll = async (req, res, next) => {
 };
 
 const getSingle = async (req, res, next) => {
+  if (ObjectId.isValid(req.id)) 
+  {return res.status(400).send("Invalid object id");}
   const userId = new ObjectId(req.params.id);
   const result = await mongodb
     .getDb()
@@ -36,19 +38,26 @@ const createToDo = async (req,res,next) => {
     activities: req.body.activities,
     notes: req.body.notes
   };
-  const response = await mongodb
-  .getDb()
-  .db('CSE341')
-  .collection('todos')
-  .insertOne(todo);
-  if (response.acknowledged) {
-    res.status(201).json(response);
-  } else {
-    res.status(500).json(response.error || 'Some error occurred while creating the todo.');
+  try{
+    const response = await mongodb
+    .getDb()
+    .db('CSE341')
+    .collection('todos')
+    .insertOne(todo);
+    if (response.acknowledged) {
+      res.status(201).json(response);
+    }
+  }catch (error) {
+    return res.status(500).json({
+      success: false,
+      message: (response.error || 'Some error occurred while creating the todo.')
+      })
   }
 };
 
 const updateToDo = async (req,res,next) => {
+  if (ObjectId.isValid(req.id)) 
+  {return res.status(400).send("Invalid object id");}
   const userId = new ObjectId(req.params.id);
   const todo = {
     todaysDate: req.body.todaysDate,
@@ -59,41 +68,44 @@ const updateToDo = async (req,res,next) => {
     activities: req.body.activities,
     notes: req.body.notes
     };
-  const response = await mongodb
-  .getDb()
-  .db('CSE341')
-  .collection('todos')
-  .replaceOne({ _id: userId }, todo);
-  console.log(response);
-  if (response.modifiedCount > 0) {
-    res.status(204).send();
-  } else {
-    res.status(500).json(response.error || 'Some error occurred while updating the todo.');
-  }
+   try{
+    const response = await mongodb
+    .getDb()
+    .db('CSE341')
+    .collection('todos')
+    .replaceOne({ _id: userId }, todo);
+    console.log(response);
+    if (response.modifiedCount > 0) {
+      res.status(204).send();
+    } 
+   } catch (error){
+    return res.status(500).json({
+      success: false,
+      message: (response.error || 'Some error occurred while updating the todo.')
+      })
+    }
 };
 
 const deleteToDo = async (req,res,next) => {
+  if (ObjectId.isValid(req.id)) 
+  {return res.status(400).send("Invalid object id");}
   const userId = new ObjectId(req.params.id);
-  // const todo = {
-  //   todaysDate: req.body.todaysDate,
-  //   task: req.body.task,
-  //   dueDate: req.body.dueDate,
-  //   class: req.body.class,
-  //   appointment: req.body.appointment,
-  //   activities: req.body.activities,
-  //   notes: req.body.notes
-  //   };
-  const response = await mongodb
-  .getDb()
-  .db('CSE341')
-  .collection('todos')
-  .remove({ _id: userId }, true);
-  console.log(response);
-  if (response.deletedCount > 0) {
-    res.status(204).send();
-  } else {
-    res.status(500).json(response.error || 'Some error occurred while deleting the contact.');
-  }
+  try{
+    const response = await mongodb
+    .getDb()
+    .db('CSE341')
+    .collection('todos')
+    .remove({ _id: userId }, true);
+    console.log(response);
+    if (response.deletedCount > 0) {
+      res.status(204).send(); 
+    }
+  }catch (error){
+    return res.status(500).json({
+      success: false,
+      message: (response.error || 'Some error occurred while deleting the contact.')
+      })
+    }
 };
 
 
